<resources>
    <string name="app_name">小吕电影</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="grade">评分</string>


    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="req_register">用户注册</string>
    <string name="nick">昵称</string>
    <string name="Email">邮箱</string>
    <string name="tel">手机号</string>
    <string name="register">注册</string>
    <string name="findpwd">找回密码</string>
    <string name="code">验证码</string>
    <string name="sure">确认</string>
    <string name="title_content">加载中</string>、
    <string name="default_tv_show">加载中</string>

    <declare-styleable name="StarRatingView">
        <!--星星点亮-->
        <attr name="stat_on" format="reference"></attr>
        <!--星星关闭-->
        <attr name="stat_off" format="reference"></attr>
        <!--半颗星星-->
        <attr name="stat_half" format="reference"></attr>
        <!--是否可以点击滑动评分-->
        <attr name="ratable" format="boolean"></attr>
        <!--星星之间间距-->
        <attr name="star_padding" format="dimension"></attr>
    </declare-styleable>

</resources>
