<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="710px"
            android:background="@drawable/register_input"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/userId_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <!-- android:ems="10"表示EditText内最多只显示10个字符，超出不显示 -->
				<!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->
            </LinearLayout>

            <EditText
                android:id="@+id/findpwd_edtUname"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/idtxthint"
                android:editable="false"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />

            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/findpwd_edtEmil"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:editable="false"
                android:hint="@string/Email"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />

            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

            <EditText
                android:id="@+id/findpwd_edtPwd"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/pwdtxthint"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />
            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />
            <EditText
                android:id="@+id/findpwd_edtCode"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@null"
                android:hint="@string/code"
                android:paddingLeft="15dp"
                android:paddingRight="0dp"
                android:singleLine="true"
                android:textColorHint="#999999"
                android:textSize="18sp" />

            <!-- 横线  -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#CACDD1" />

        </LinearLayout>

        <Button
            android:id="@+id/findpwd_sure"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/login_button_style"
            android:text="@string/sure"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/set_net_btn"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:src="@drawable/logo"/>

</LinearLayout>